Update-Buttons alignment fix

--- a/Portfolio website/style.css
+++ b/Portfolio website/style.css
@@ -161,25 +161,29 @@ header nav ul li a{
     font-size: 20px;
     color: #4e44ab;
     width: fit-content;
-    display: inline-block;
+    display: block;
     border: 2px solid #4e44ab;
     padding: 8px;
     border-radius: 10px;
     position: relative;
-    margin-left: 7rem;
-    margin-top: 15px;
+    margin: 0 auto;
+    margin-top: 18px;
+    text-align: center;
 }
 
 #button2 {
     font-family: 'Catamaran';
     font-size: 20px;
     color: #4e44ab;
-    display: inline-block;
+    width: fit-content;
+    display: block;
     border: 2px solid #4e44ab;
-    position: relative;
-    margin: 20px 100px;
     padding: 8px;
     border-radius: 10px;
+    position: relative;
+    margin: 0 auto;
+    margin-top: 20px;
+    text-align: center;
 }
 
 #button1:hover, #button2:hover {
